[package]

name = "rust-woodboat"
version = "0.0.1"
authors = ["me@example.com"]

[features]
# This allows us to use `#[cfg(unstable)]` to conditionalize the use of
# unstable Rust features from the nightly builds.  This is handy if we want
# to use, say, benchmaking from the `test` library when available.  Also,
# `travis-cargo` expects this to be here when building against the nightly
# version of Cargo.
unstable = []

[[bin]]
name = "woodboat"

[dependencies]
discord = "0.7.0"
libsodium-sys = "^0.0.12"
